--- a/package.json
+++ b/package.json
@@ -6,21 +6,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.10",
+    "@vercel/analytics": "^1.1.3",
+    "@vercel/speed-insights": "^1.0.9",
+    "clsx": "^2.1.1",
+    "geist": "1.2.2",
+    "marked": "^16.1.2",
+    "motion": "^12.23.12",
+    "next": "15.4.6",
+    "openai": "^4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sugar-high": "^0.6.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "4.0.0-alpha.13"
+  },
+  "devDependencies": {
     "@tailwindcss/postcss": "4.0.0-alpha.13",
     "@types/node": "20.11.17",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
-    "@vercel/analytics": "^1.1.3",
-    "@vercel/speed-insights": "^1.0.9",
-    "geist": "1.2.2",
-    "marked": "^16.1.2",
-    "next": "15.4.6",
-    "openai": "^4",
     "postcss": "^8.4.35",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sugar-high": "^0.6.0",
-    "tailwindcss": "4.0.0-alpha.13",
     "typescript": "5.3.3"
   }
 }
