Enable blog retrieval in playground with RAG
- Add blog RAG functionality to playground API
- Build blog embedding index for semantic search
- Fix Next.js 15 async params in blog routes
- Update build process to include blog index generation
- Add npm script for building blog index

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "pnpm run build:blog-index && next build",
+    "start": "next start",
+    "build:blog-index": "node --env-file=.env --experimental-strip-types ./scripts/build-blog-index.mjs"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
