Fix deployment by handling missing OPENAI_API_KEY gracefully
- Remove --env-file flag from build script
- Add fallback blog index creation when API key is missing
- Build process now works with or without environment variables
- Deployment will succeed even without OPENAI_API_KEY set

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "next dev",
     "build": "pnpm run build:blog-index && next build",
     "start": "next start",
-    "build:blog-index": "node --env-file=.env --experimental-strip-types ./scripts/build-blog-index.mjs"
+    "build:blog-index": "node --experimental-strip-types ./scripts/build-blog-index.mjs"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
