feat: update to gpt-5-nano model and fix TypeScript errors
- Update playground API to use gpt-5-nano instead of gpt-5
- Fix TypeScript errors with proper type annotations
- Add type safety for Next.js 15 async params
- Clean up unused code and improve type checking
- Ensure compatibility with latest Next.js version

--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "pnpm run build:blog-index && next build",
-    "start": "next start",
-    "build:blog-index": "node --experimental-strip-types ./scripts/build-blog-index.mjs"
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
